# splayer

./: .gitignore  .project  CHANGES  README.md  index.html  params.json  splayer.cabal
doc/: spec.md
src/: Main.hs
src/Model/: Types.hs
src/Player/: Core.hs
src/Protocol/: Builder.hs  Parser.hs
src/Server/: Connection.hs
src/Server/Protocol/: Builder.hs  Parser.hs
src/World/: Types.hs
test-src/: Spec.hs
test-src/Arbitrary/: Model.hs
test-src/Mockup/: Server.hs
test-src/Model/: TypesArbitrary.hs
test-src/Protocol/: ParserSpec.hs
test-src/Server/Protocol/: ParserSpec.hs
test-src/Specification/: PlayerSpec.hs  ProtocolSpec.hs
