name:           splayer
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Application for Robocup soccer server simulator
homepage:       https://github.com/klangner/splayer
Bug-reports:    https://github.com/klangner/splayer/issues
stability:      Unstable interface, incomplete features.
category:       Application
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    Player for soccer server simulator.

executable splayer
  hs-source-dirs:  src
  main-is:         Main.hs
  default-language: Haskell2010
  build-depends:    
                    base >= 4 && <4.7,
                    parsec >=3.1.3 && <3.2
  ghc-options:      -Wall -threaded
  other-modules:   
                   Model.Types,
                   Player.Core,
                   Server.Protocol.Parser

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:   
                    base >= 4 && <4.7,
                    Cabal >=1.16 && <1.19,
                    hspec >=1.8 && <1.9,
                    QuickCheck >=2.6 && <2.7,
                    parsec >=3.1.3 && <3.2

  other-modules:   
                   Model.Types,
                   Player.Core,
                   Server.Protocol.Parser
  hs-source-dirs:  
                    src,
                    test-src

