name:           splayer
version:        0.1
cabal-version:  >= 1.18
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Application for Robocup soccer server simulator
homepage:       https://github.com/klangner/splayer
Bug-reports:    https://github.com/klangner/splayer/issues
stability:      Unstable interface, incomplete features.
category:       Application
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    Player for soccer server simulator.

executable splayer
  hs-source-dirs:  src
  main-is:         Main.hs
  default-language: Haskell2010
  build-depends:    
                    base >= 4 && <5,
                    parsec >=3.1.9 && <4
  ghc-options:      -Wall -threaded
  other-modules:   
                   Model.Types,
                   Player.Core,
                   Server.Protocol.Parser

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:   
                    base >= 4 && <5,
                    Cabal >=1.18 && <2,
                    hspec >=2.1.5 && <3,
                    QuickCheck >=2.8 && <3,
                    parsec >=3.1.9 && <4

  other-modules:   
                   Model.Types,
                   Player.Core,
                   Server.Protocol.Parser
  hs-source-dirs:  
                    src,
                    test-src

